Update (NUMPY)Day5&6 .ipynb

--- a/(NUMPY)Day5&6 .ipynb
+++ b/(NUMPY)Day5&6 .ipynb
@@ -19,8 +19,8 @@
     "with open(\"data.csv\",\"w\",newline=\"\") as file:\n",
     "    writer = csv.writer(file)\n",
     "    writer.writerow([\"Name\",\"Age\",\"City\"])\n",
-    "    writer.writerow([\"lavanya\",\"20\",\"kkd\"])\n",
-    "    writer.writerow([\"krishna\",\"25\",\"hyd\"])"
+    "    writer.writerow([\"tom\",\"20\",\"kkd\"])\n",
+    "    writer.writerow([\"jerry\",\"25\",\"hyd\"])"
    ]
   },
   {
